<resources>
    <string name="app_name" translatable="false">Meu Rolê</string>
    <string name="helton_isac" translatable="false">Helton Isac</string>
    <string name="helton_souza" translatable="false">Helton Souza</string>
    <string name="lyan_masterson" translatable="false">Lyan Masterson</string>
    <string name="ricardo_kerr" translatable="false">Ricardo Kerr</string>
    <string name="ellipsis" translatable="false">…</string>
    <string name="google" translatable="false">google</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">General notifications channel</string>
    <string name="default_notification_channel_description">General notifications</string>
    <string name="button_login">Log in</string>
    <string name="loading_message_processing">Processing…</string>
    <string name="message_splash">Meu Rolê</string>
    <string name="label_password">Password</string>
    <string name="label_email">E-mail</string>
    <string name="create_your_account"><u>Create Your Account</u></string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="menu_home_home">Home</string>
    <string name="menu_home_profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="search_roadmaps">Search a roadmap</string>
    <string name="button_search_maps">Search on Maps</string>
    <string name="create_roadmap">Create a roadmap</string>
    <string name="use_biometrics">Use biometrics</string>
    <string name="register_biometric_login">Do you want to register a Biometric Login?</string>
    <string name="yes">Yes</string>
    <string name="authenticating">Authenticating…</string>
    <string name="processing">Processing…</string>
    <string name="wait">Wait…</string>
    <string name="later">Later</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="login_to_continue">Please login to get access</string>
    <string name="use_app_password">Use App password</string>
    <string name="founders">Founders</string>
    <string name="version">Version: %1$s (build: %2$s)</string>
    <string name="about">About</string>
    <string name="label_search_roadmap">Where are we going?</string>
    <string name="share">Share</string>
    <string name="share_message">Discover the \"Meu Rolê\" app, soon available on Google Play and the Apple Store!</string>
    <string name="label_type_roadmap_title">Type the Roadmap Title</string>
    <string name="label_type_a_roadmap_description">Write a roadmap Description</string>
    <string name="save_roadmap">Save roadmap</string>
    <string name="add_point_of_interest">Add point of interest</string>
    <string name="edit_point_of_interest">Edit point of interest</string>
    <string name="connect">----------- or connect with: -----------</string>
    <string name="error">Error</string>
    <string name="biometrics_failed">Failed to use biometrics.</string>
    <string name="location_permission_not_granted">Location permission not granted</string>
    <string name="location_not_found">Location not found, try a city name or state instead.</string>
    <string name="poi_registered_with_success">Point of Interest successful registered</string>
    <string name="poi_edited_with_success">Point of Interest successful edited</string>
    <string name="roadmap_registered_with_success">Roadmap successful registered</string>
    <string name="poi_deleted_with_success">Point of Interest successful deleted</string>
    <string name="working_on_it">We are working on it!</string>
    <string name="disabled_sign_in_message">Glad you are interested in performing your authentication with %1$s, we are working on it. For now, please use the login with email and password.</string>
    <string name="profile_title">Profile</string>
    <string name="loading">Loading…</string>
    <string name="e_mail">e-mail:</string>
    <string name="search_here">Search here</string>
    <string name="name_of_point_interest">Write the name of interest point.</string>
    <string name="description_point_interest">Write a description to the interest point.</string>
    <string name="telephone">Number of telephone</string>
    <string name="label_telephone">Make call</string>
    <string name="button_save_point_interest">Save point of interest</string>
    <string name="edit">Edit</string>
    <string name="edit_roadmap">Edit the roadmap</string>
    <string name="start_roadmap">Start Roadmap</string>
    <string name="point_of_interest">Point of interest</string>
</resources>